Changes for 3.4.0beta2

Bug fixes:
....I..... [ZBX-12462] fixed database upgrade patch for proxy (dimir)
....I..PS. [ZBXNEXT-3006] fixed distribution archive creation (make dist) and log, web scenario item preprocessing (wiper)

--------------------------------------------------------------------------------
Changes for 3.4.0beta1

New features:
..F....... [ZBXNEXT-2102] added support of new dashboard widgets "Plain text" and "Graph" (miks, vmurzins)
..F....... [ZBXNEXT-2102] implemented two-direction widget linkage for data sharing; improved active element selection in map navigation tree widget when map is changed from map widget (miks)
..F....... [ZBXNEXT-2102] implemented validation for empty fields in widget configuration forms (Sasha)
..F....... [ZBXNEXT-2102] added placeholder on empty dashboard (vmurzins)
A.FG...PS. [ZBXNEXT-3006] implemented support of bulk metric collection for dependent items data population (gcalenko, vjaceslavs, wiper)
....I..... [ZBXNEXT-3725] updated templates for network devices to new version (internal version 0.10beta)

Bug fixes:
....I..... [ZBXNEXT-3006] fixed libevent build depenedencies (wiper)
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
A.F....... [ZBXNEXT-2102] fixed several issues in dashboard (Ivo, miks, Sasha, vmurzins)
..F....... [ZBXNEXT-2102] fixed copying sharing properties when cloning dashboard (vmurzins)
........S. [ZBXNEXT-18] fixed unnecessary notification sending a recovery message (Sergejs)
........S. [ZBXNEXT-18] fixed acknowledge notification sending in maintenance period (Sergejs)
........S. [ZBX-12339] fixed item history and trends flags update during configuration cache synchronization (wiper)
..F....... [ZBXNEXT-18] fixed php5.4 incompatibility in events page and acknowledge operation form (gcalenko)
..F....... [ZBXNEXT-18] fixed script name select button for new acknowledge operation form and recovery operation form (gcalenko)
