@@ -1,6 +1,7 @@
 Changes for 3.4.0beta2
 
 Bug fixes:
+.......PS. [ZBX-12458] fixed incorrect use of zbx_strlcat() in DBpatch_3030060_migrate_pairs(); thanks to MATSUDA Daiki for patch (Andris)
 ....I..... [ZBX-12462] fixed database upgrade patch for proxy (dimir)
 ....I..PS. [ZBXNEXT-3006] fixed distribution archive creation (make dist) and log, web scenario item preprocessing (wiper)
 
